--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,11 +25,12 @@ p {
 
 h1 {
     color: #fafafa;
-    font-size: 500%;
+    font-size: 700%;
 }
 
 h2 {
     color: #7600e4;
+    font-size: 300%;
 }
 
 /*------------------------------------------------Special Paddings / margins / text */
@@ -82,24 +83,22 @@ header {
 /*------------------------------------------------footer */
 
 footer {
-    background-color: none;
+    background-color: rgba(0, 0, 0, 0.2);
     color: #fafafa;
-    min-height: 100px;
     margin: 0;
+    padding: 0;
 }
 
 .social-links {
-    padding: 20px;
+    padding: 20px 0px 0px 0px;
 }
 
 .social-links li a i {
     width: 40px;
     height: 40px;
-    padding: 12px 0;
     border-radius: 50%;
     font-size: 30px;
     line-height: 10px;
-    text-align: center;
     color: #fafafa;
 }
 
@@ -113,7 +112,23 @@ footer {
 
 /*------------------------------------------------homepage */
 
+.intro-text {
+    max-width: 100%;
+    display: inline;
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
 
+.head-image {
+    max-height: 100%;
+    position: fixed right;
+}
+
+.col {
+    min-width: 0;
+    margin: 0;
+    max-height: 800px;
+}
 
 /*------------------------------------------------about */
 
