--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,7 +25,7 @@ p {
 
 h1 {
     color: #fafafa;
-    font-size: 700%;
+    font-size: 600%;
 }
 
 h2 {
@@ -47,6 +47,8 @@ h2 {
 
 header {
     padding: 20px;
+    margin: 0;
+    text-align: center;
 }
 
 .menucontainer {
@@ -80,22 +82,24 @@ header {
     -o-transition: all 0.35s ease-in-out;
 }
 
+
 /*------------------------------------------------footer */
 
 footer {
-    background-color: rgba(0, 0, 0, 0.2);
+    background-color: rgba(0, 0, 0, 0.1);
     color: #fafafa;
     margin: 0;
-    padding: 0;
+    padding: 10;
+    text-align: center;
 }
 
 .social-links {
-    padding: 20px 0px 0px 0px;
+    padding: 40px 0px 0px 0px;
 }
 
 .social-links li a i {
-    width: 40px;
-    height: 40px;
+    width: 50px;
+    height: 50px;
     border-radius: 50%;
     font-size: 30px;
     line-height: 10px;
@@ -147,3 +151,8 @@ footer {
 
 
 /*------------------------------------------------contact */
+
+
+
+/*------------------------------------------------Media Query */
+
