--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -164,7 +164,10 @@ footer {
 
 /*------------------------------------------------podcast */
 
-
+.jumbotron {
+    max-width: 70%;
+    background-color: rgba(0, 0, 0, 0);
+}
 
 /*------------------------------------------------standup */
 
