--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,7 +57,6 @@ h4 {
 
 #page-margin {
     margin: 20px 20px 50px 20px;
-    padding-right: 10px;
 }
 
 /*------------------------------------------------header */
@@ -79,6 +78,7 @@ header {
 .nav-item {
     padding-right: 25px;
     padding-left: 25px;
+    padding-bottom: 10px;
 }
 
 .nav-item a {
@@ -237,6 +237,7 @@ button[type="submit"]:hover {
         padding: 10;
     }
 }
+
 @media screen and (min-width: 768) {
     .head-image {  
         max-height: 90%;
