--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,7 +85,7 @@ header {
     width: 100%;
     text-decoration: none;
     color: #fafafa;
-    height: 120px;
+    height: 50px;
 }
 
 .nav-item a:hover {
@@ -151,6 +151,7 @@ footer {
     position: fixed;
     bottom: 0;
     right: 5;
+    visibility: visible;
 }
 
 .head-image-two {
@@ -158,15 +159,15 @@ footer {
     position: fixed;
     bottom: 0;
     right: 5;
-    display: none;
+    visibility: hidden;
 }
 
 .head-image-one:hover {
     .head-image-one {
-        display: none;
+        visibility: hidden;
     }
     .head-image-two {
-        display: inline;
+        visibility: visible;
     }
 }
 
@@ -224,8 +225,6 @@ footer {
 .bottom-image {
     max-height: 50%;
     display: block;
-    margin-left: auto;
-    margin-right: auto;
     margin-bottom: 0;
     padding-bottom: 0;
     position: bottom;
@@ -267,8 +266,8 @@ button[type="submit"]:hover {
 
 /*------------------------------------------------Media Query */
 
-@media screen and (min-width: 540px) {
-    .head-image .about-image{  
+@media screen and (max-width: 767px) {
+    .head-image-one .about-image .podcast-image{  
         display: none;
     }
     .intro-text {
@@ -278,7 +277,7 @@ button[type="submit"]:hover {
 }
 
 @media screen and (min-width: 768) {
-    .head-image {  
+    .head-image-one .about-image .podcast-image {  
         max-height: 90%;
     }
     .intro-text {
