--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,7 @@ p {
 
 h1 {
     color: #fafafa;
+    font-size: 600%;
 }
 
 h2 {
@@ -31,15 +32,11 @@ h4 {
     color: #7600e4;
 }
 
-/* ---- New stuff added --- */
-
 a {
 	color: #fafafa;
     font-family: "Alatsi", sans-serif;
     text-transform: uppercase;
 }
-
-/* ---- New stuff ended --- */
 
 /*------------------------------------------------Special Paddings / margins / text */
 
@@ -74,8 +71,6 @@ a {
     margin-right: 0px;
 }
 
-/* ---- New stuff added --- */
-
 #container {
 	margin: 0 auto;
 	max-width: 890px;
@@ -86,57 +81,7 @@ a {
 	display: none;
 }
 
-/* ---- New stuff ended --- */
-
 /*------------------------------------------------header */
-
-
-
-/* ---- old nav start
-
-.navbar-nav {
-    font-family: "Alatsi", sans-serif;
-    letter-spacing: 2px;
-    text-transform: uppercase;
-    text-align: center;
-    font-size: 26px;
-}
-
-.nav-item {
-    padding-right: 25px;
-    padding-left: 25px;
-    padding-bottom: 0px;
-    display: inline-block;
-    text-align: center;
-}
-
-.nav-item a {
-    width: 100%;
-    text-decoration: none;
-    color: #fafafa;
-    height: 50px;
-    position: relative;
-    display: block;
-    overflow: hidden;
-}
-
-.nav-item a:hover {
-    color: #7600e4;
-    transition: all 0.35s ease-in-out;
-    -moz-transition: all 0.35s ease-in-out;
-    -webkit-transition: all 0.35s ease-in-out;
-    -o-transition: all 0.35s ease-in-out;
-}
-
-.fa-bars {
-color: #fafafa;
-}
-
-old nav end --- */
-
-
-
-/* ---- New stuff added --- */
 
 nav { 
 	margin:0;
@@ -181,15 +126,13 @@ nav ul ul {
 	top: 60px; 
 }
 
-/* ---- New stuff ended --- */
-
 /*------------------------------------------------footer */
 
 footer {
-    background-color: rgba(0, 0, 0, 0.1);
+    background-color: #aa3ee8;
     color: #fafafa;
     margin: 0;
-    padding: 10;
+    padding: 0;
     text-align: center;
     position: fixed;
     bottom: 0;
@@ -243,7 +186,6 @@ footer {
     display: inline;
     padding-top: 100px;
     padding-bottom: 50px;
-    font-size: 80%;
 }
 
 .swap-on-hover {
@@ -284,7 +226,6 @@ footer {
 
 .about-text {
     height: 80%;
-    
 }
 
 /*------------------------------------------------podcast */
@@ -391,6 +332,10 @@ button[type="submit"]:hover {
 	.menu {
 		display: none;
 	}
+
+    h1 {
+        font-size: 300%;
+    }
 
 	.toggle {
 		display: block;
