--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -416,19 +416,19 @@ button[type="submit"]:hover {
             background-size: cover;
         }
     .swap-on-hover-head-image-one {
-            src: "assets/img/head-image-one.png";
+            content: url("assets/img/head-image-one.png");
     }
     .swap-on-hover-head-image-two {
-            src: "assets/img/head-image-two.png";
+            content: url("assets/img/head-image-two.png");
     }
     .bottom-image {
-            src: "assets/img/bottom.png";
+            content: url("assets/img/bottom.png");
     }
     .about-image {
-            src: "assets/img/about.png";
+            content: url("assets/img/about.png");
     }
     .podcast-image {
-            src: "assets/img/mill.png";
+            content: url("assets/img/mill.png");
     }
 }
 }
